# IntelliTradeX

./: README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
