[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "chromadb>=1.5.8",
    "email-validator>=2.3.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "kafka-python>=2.3.1",
    "langchain>=1.2.15",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
